# zxing_cpp

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/cli/src/: ImageReaderSource.cpp  ImageReaderSource.h  jpgd.cpp  jpgd.h  lodepng.cpp  lodepng.h  main.cpp
app/src/main/cpp/opencv/src/zxing/: MatSource.cpp  MatSource.h
app/src/main/cpp/zxing/: BarcodeFormat.h  BinaryBitmap.cpp  ChecksumException.cpp  DecodeHints.cpp  DecodeHints.h  Exception.h  FormatException.cpp  IllegalStateException.h  InvertedLuminanceSource.cpp  LuminanceSource.cpp  MultiFormatReader.cpp  MultiFormatReader.h  NotFoundException.h  Reader.cpp  Reader.h  ReaderException.h  ResultPoint.cpp  ResultPoint.h  ResultPointCallback.cpp  ResultPointCallback.h  ZXing.h  zxing.cpp
app/src/main/cpp/zxing/aztec/decoder/: Decoder.cpp
app/src/main/cpp/zxing/aztec/detector/: Detector.cpp  Detector.h
app/src/main/cpp/zxing/common/: Array.h  BitArray.cpp  BitMatrix.cpp  DecoderResult.cpp  GlobalHistogramBinarizer.cpp  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  GreyscaleRotatedLuminanceSource.cpp  GridSampler.cpp  GridSampler.h  IllegalArgumentException.cpp  PerspectiveTransform.cpp  PerspectiveTransform.h  Point.h  StringUtils.cpp  StringUtils.h
app/src/main/cpp/zxing/common/detector/: MonochromeRectangleDetector.cpp  MonochromeRectangleDetector.h  WhiteRectangleDetector.cpp
app/src/main/cpp/zxing/common/reedsolomon/: GenericGFPoly.cpp  ReedSolomonDecoder.cpp  ReedSolomonDecoder.h
app/src/main/cpp/zxing/pdf417/decoder/: DecodedBitStreamParser.cpp  DecodedBitStreamParser.h
app/src/main/cpp/zxing/qrcode/: ErrorCorrectionLevel.cpp  FormatInformation.cpp  FormatInformation.h
app/src/main/cpp/zxing/qrcode/decoder/: BitMatrixParser.cpp  DataBlock.cpp  DataBlock.h  DataMask.cpp  DecodedBitStreamParser.cpp  DecodedBitStreamParser.h
app/src/main/java/com/reding/zxingcpp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
